fixed issue on ios setting size

--- a/modular-app/src/app/pages/home-settings/home-settings.page.scss
+++ b/modular-app/src/app/pages/home-settings/home-settings.page.scss
@@ -27,7 +27,7 @@ ion-content {
     background: #e3e3e3;
 }
 .add_label{
-    bottom: 140px;
+    bottom: 21%;
     position: fixed;
     font-weight: bold;
     color: #707070;
@@ -67,7 +67,7 @@ i {
     // background-color: rgba(255, 255, 255, .5);
     left: 0px;
     position: fixed;
-    bottom: 30px;
+    bottom: 3%;
     width: 100vw;
     height: 100px;
     display: flex;
